<resources>
    <string name="app_name">Ehrome</string>
    <string name="useragent">Mozilla/5.0 (Linux; Android 5.0; SM-G900P Build/LRX21T) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/68.0.3440.106 Mobile Safari/537.36</string>
    <string name="iphoneuseragent">Mozilla/5.0 (iPhone; CPU iPhone OS 11_0 like Mac OS X) AppleWebKit/604.1.38 (KHTML, like Gecko) Version/11.0 Mobile/15A372 Safari/604.1</string>
    <string name="pcuseragent">Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/68.0.3440.106 Safari/537.36</string>
    <string name="browser">Ehrome</string>
    <string name="history">历史记录</string>
    <string name="setup">设置</string>
    <string name="login">请登录</string>
    <string name="bookmark">书签</string>
    <string name="download">下载</string>
    <string name="set_history">历史</string>
    <string name="help">帮助</string>
    <string name="feedback">反馈</string>
    <string name="set_setup">设置</string>
    <string name="close">关闭</string>
    <string name="quit">退出</string>
    <string name="setup_homeurl">设置主页</string>
    <string name="setup_search">设置搜索引擎</string>
    <string name="setup_useragent">设置浏览器标识</string>
    <string name="setup_search_text">设置搜索栏显示</string>
    <string name="enablejs">启用JavaScript脚本</string>
    <string name="enableimage">启用无图浏览网页</string>
    <string name="enableform">启用表单自动填充</string>
    <string name="enableaddress">启用网页获取地理位置</string>
    <string name="enablehttps">启用网页错误继续浏览</string>
    <string name="cleardata">清除记录</string>
    <string name="safecolor">#188038</string>
    <string name="unsafecolor">#F24C36</string>
    <string name="defaultcolor">#4F4F4F</string>
    <string name="tip_safe_title">连接是安全的</string>
    <string name="tip_safe_desc">您发送给这个网站的信息（例如密码或信用卡信息）不会外泄。</string>
    <string name="tip_unsafe_title">您与此网站之间建立的连接不安全</string>
    <string name="tip_unsafe_desc">请勿在此网站上输入任何敏感信息（例如密码或信用卡信息），因为攻击者可能会盗取这些信息。</string>
    <string name="tip_unsafe2_title">您与此网站之间建立的连接并非完全安全</string>
    <string name="tip_unsafe2_desc">此网站的连接私密性存在严重问题，别人也许能看到您通过此网站发送的信息。</string>
    <string name="input_txt">请输入搜索内容</string>
    <string name="urlad">URL拦截列表</string>
    <string name="jsad">JavaScript拦截列表</string>
    <!--软件更新url-->
    <string name="update_url">http://192.168.26.77/webview/update.php</string>
    <string name="need_storage">请给应用开启存储写入权限</string>
    <string name="now_download">现在请点击下载文件</string>
    <string name="open_storage">请给应用开启存储写入权限</string>
    <string name="need_location">请给应用开启定位权限</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="download_tip">下载提示</string>
    <string name="download_error">下载失败</string>
    <string name="choose_file">选择文件</string>
    <string name="now_get_address">正在请求获取您的位置信息</string>
    <string name="close_file_dowmload">您已经关闭了文件下载</string>
    <string name="no_sdcard_to_download">没有安装sdcard,无法下载</string>
    <string name="file_download_complete">文件下载完成了</string>
    <string name="page_load_error">页面加载出错</string>
    <string name="quit_browser">再点一次，退出浏览器</string>
    <string name="clear_success">清除成功</string>
    <string name="no_delete">无法删除</string>
    <string name="windows_loading">窗口标题加载中...</string>
    <string name="open_multiwindow">请在设置中打开多窗口</string>
    <string name="open_url_intercept">请在设置中开启URL拦截</string>
    <string name="no_intercept">当前页面无需拦截</string>
    <string name="url_intercept">拦截URL</string>
    <string name="open_js_intercept">请在设置中开启JavaScript拦截</string>
    <string name="js_intercept">拦截JavaScript</string>
    <string name="choose">请选择</string>
    <string name="add_success">添加成功</string>
    <string name="set_success">设置成功</string>
    <string name="add_fail">添加失败</string>
    <string name="view_picture">查看图片</string>
    <string name="save_picture">保存图片</string>
    <string name="copy_url">复制链接</string>
    <string name="new_window_open">新窗口打开</string>
    <string name="copy_url_success">复制链接成功</string>
    <string name="save">保存</string>
    <string name="about">关于</string>
    <string name="check_update">检查更新</string>
    <string name="update_set">开启自动检查更新</string>
    <string name="open_multiwindow_set">开启浏览器多窗口</string>
    <string name="js_can_openwindow">允许JS打开新窗口</string>
    <string name="start_url_intercept">开启URL拦截</string>
    <string name="url_intercept_list">URL拦截列表</string>
    <string name="open_javascript_intercept">开启JavaScript拦截</string>
    <string name="intercept_js_list">JavaScript拦截列表</string>
    <string name="error_set">开启错误日志记录</string>
    <string name="not_need_update">当前版本已经是最新的，不需要更新哦</string>
    <string name="no_sdcard">手机没有SD卡，下载失败</string>
    <string name="open_copy">开启网页文字强制复制</string>
    <string name="open_goback">开启网页强制后退</string>
    <string name="source_url">源代码地址：</string>
    <string name="add_qq_feedback">关于软件的所有问题请加QQ群反馈</string>
    <string name="set_homeurl">设置主页</string>
    <string name="not_empty_url">网址不能为空</string>
    <string name="url_start_http">网址需要以http开头</string>
    <string name="homeurl_set_success">主页设置成功</string>
    <string name="set_search_engine">设置搜索引擎</string>
    <string name="set_browser_sign">设置浏览器标识</string>
    <string name="set_searchtext_style">设置搜索栏显示</string>
    <string name="clear_browser_log">清除浏览器记录</string>
    <string name="please_open_url_intercept">请开启URL拦截</string>
    <string name="please_open_js_intercept">请开启JavaScript拦截</string>
    <string name="update_tip">更新提示</string>
    <string name="intercept_url_fail">拦截网址失败</string>
    <string name="intercept_url">拦截此网页</string>
    <string name="intercept_url_add">拦截网页已添加</string>
    <string name="share_url">分享网页</string>
    <string name="view_fail">查看失败</string>
    <string name="unknow">未知</string>
</resources>
